<resources>
    <string name="app_name">Game Bash</string>
    <string name="grid">grid</string>
    <string name="turn">TURN :</string>
    <string name="grids">grids</string>
    <string name="turnlogo">turnLogo</string>
    <string name="_info_">info</string>
    <string name="player_details">Player Details</string>
    <string name="gameTitles">Tic Tac Toe &amp; Fishie Fish</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="mute">mute</string>
    <string name="component">component</string>
    <string name="logo">logo</string>
    <string name="info">
        Tic Tac Toe is free classic puzzle game also known as Noughts and Crosses or sometimes X and O.\n\n
        The Tic Tac Toe game is a game for two players, who take turns marking the spaces in a 3×3 grid. The player who succeeded in placing three respective marks in a horizontal, vertical, or diagonal row wins the game.\n\n
        The Tic Tac Toe is a great way to pass your free time whether you\'re standing in a line or spending time with your kids. Stop wasting paper and save trees. Because of the simplicity of Tic Tac Toe, it is often used as a pedagogical tool for teaching the concepts of good sportsmanship and the branch of artificial intelligence.\n\n
        Start playing Tic Tac Toe game on your Android device.\n\n
        Get Tic Tac Toe now and let the fun begin!\n\nFishie fish is a game in which player will be riding inside the fish which does not know which
food it can eat among all food available inside the sea.
Basically this fish is a herbivore. So, player should be guiding the fish to plants or fruits. Player
will be awarded one point for each food he takes, But fish dies if it takes meat 3 times. If player
guides a fish to a food with higher calories then 2 points will be awarded.
Basically, it is a 2D game in which player must guide fish the altitude at which the fish must
swim, it grabs inside what all is just in front of it at same altitude.
The altitude of fish increases as we touch the screen multiple times and altitude decreases as
we reduce frequency of touching.
Red ball indicates Meat, Yellow ball indicates algae wafers(which can provide more calories),
White ball indicates normal veggies that generally a herbivorous fish takes\n
    </string>
    <string name="creators">
        Creators :\n
        Akshay Jain\n
        Navaneeth P\n
        Rishik TS\n
        Sarthak Jain\n
    </string>
</resources>